fix(shs-6188): spacing fixes in global footer

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_global-footer.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_global-footer.scss
@@ -82,7 +82,7 @@
 }
 
 .su-global-footer__menu {
-  margin-bottom: hb-calculate-rems(10px);
+  margin: 0 0 hb-calculate-rems(10px);
   padding: 0;
   font-size: hb-calculate-rems(15px);
   list-style-type: none;
@@ -102,11 +102,11 @@
     }
 
     @include grid-media('md') {
-      margin-left: hb-calculate-rems(20px);
+      margin-right: hb-calculate-rems(20px);
     }
 
     @include grid-media('lg') {
-      margin-left: hb-calculate-rems(28px);
+      margin-right: hb-calculate-rems(28px);
       padding: 0;
       text-align: left;
     }
@@ -121,7 +121,7 @@
   font-weight: hb-theme-font-weight(semibold);
 
   @include grid-media-only('xs') {
-    padding-left: hb-calculate-rems(19px);
+    padding-right: hb-calculate-rems(19px);
   }
 
   @include grid-media-between('md', 'xl') {
@@ -135,7 +135,7 @@
 
 .su-global-footer__menu--policy {
   @include grid-media-only('xs') {
-    padding-right: hb-calculate-rems(19px);
+    padding-left: hb-calculate-rems(19px);
   }
 
   @include grid-media-only('sm') {
